fix about create books
